:lipstick: style: Add max height property to prevent overflow

--- a/styles/modules/_components.scss
+++ b/styles/modules/_components.scss
@@ -270,6 +270,7 @@ input {
       object-fit: cover;
       min-width: 100%;
       min-height: 100%;
+      max-height: 100%;
       &.uploadedGif {
         @include responsive(desktops) {
           min-width: 14rem;
